Chatting Room Slice 방식 변경